--- a/src/pages/SchedulePage.module.css
+++ b/src/pages/SchedulePage.module.css
@@ -43,7 +43,7 @@
     font-size: 2rem;
     margin: 40px 0px;
     padding-left: 0px;
-    text-shadow: 2px 2px #0d0746;
+    text-shadow: 1px 1px #0d0746;
   }
 
   .blobOne,
